Add more of cndb/vsearch "--add-opens" options to 2 places that matter for ITs