@@ -399,13 +399,15 @@ public class StargateExtension extends ExternalResource<StargateSpec, StargateEx
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/java.io=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
-      cmd.addArgument("java.base/java.nio.file.spi=ALL-UNNAMED");
-      cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/java.lang=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/java.lang.module=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/java.net=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/java.nio=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
-      cmd.addArgument("java.base/java.net=ALL-UNNAMED");
+      cmd.addArgument("java.base/java.nio.file.spi=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/java.util=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
@@ -413,15 +415,26 @@ public class StargateExtension extends ExternalResource<StargateSpec, StargateEx
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/java.util.concurrent.atomic=ALL-UNNAMED");
 
-      cmd.addArgument("--add-exports");
-      cmd.addArgument("java.base/jdk.internal.ref=ALL-UNNAMED");
-      cmd.addArgument("--add-exports");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/jdk.internal.math=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/jdk.internal.misc=ALL-UNNAMED");
-
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/jdk.internal.module=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/jdk.internal.perf=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.base/jdk.internal.ref=ALL-UNNAMED");
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.base/sun.nio.ch=ALL-UNNAMED");
+
       cmd.addArgument("--add-opens");
       cmd.addArgument("java.rmi/sun.rmi.registry=ALL-UNNAMED");
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("java.rmi/sun.rmi.server=ALL-UNNAMED");
+
+      cmd.addArgument("--add-opens");
+      cmd.addArgument("jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED");
 
       cmd.addArgument("-Dio.netty.tryReflectionSetAccessible=true");
       cmd.addArgument("-Djava.security.manager=allow");
